k8s-multiple-apps/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aws-bookstore-backend
spec:
  selector:
    app: aws-bookstore-backend
    tier: backend
  ports:
    - protocol: TCP
      name: backend-service
      port: 5000
      targetPort: 5000
  type: LoadBalancer
